fix: TPR with no_wm rephrase

--- a/evaluate/analysis.ipynb
+++ b/evaluate/analysis.ipynb
@@ -45,8 +45,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GENERATED_DIR = Path(\"../results/llama2-13b/wm/kgw\")\n",
-    "REPHRASED_DIR = Path(\"../results/llama2-13b/rephrase/KGW-SIR\")\n",
+    "RESULT_BASE_DIR = Path(\"../results/Llama-2-13B-GPTQ\")\n",
+    "GENERATED_DIR = RESULT_BASE_DIR / \"wm\" / \"SIR\"\n",
+    "REPHRASED_DIR = RESULT_BASE_DIR / \"rephrase\" / \"SIR-PRW\"\n",
     "REPHRASED_NOWM_DIR = REPHRASED_DIR.with_stem(REPHRASED_DIR.stem + \"-NOWM\")"
    ]
   },
@@ -84,7 +85,8 @@
     "        # visualize\n",
     "        print(\"======================\")\n",
     "        print(\"Experiment: \", REPHRASED_DIR.stem)\n",
-    "        print(\"Generator: \", wm_jsonl.stem)\n",
+    "        print(\"Generator: \", wm_jsonl.stem.split(\"__\")[0])\n",
+    "        print(\"Detector: \", wm_jsonl.stem.split(\"__\")[1])\n",
     "        print(\"Hash Prefix: \", hash_prefix)\n",
     "        split_comps = split_rephrased_jsonl_name(rep_jsonl)\n",
     "        print(\"Rephraser: \", split_comps[0])\n",
@@ -92,9 +94,15 @@
     "        print(\"Rephraser Detector: \", split_comps[2])\n",
     "        print()\n",
     "        for fpr, result in results.items():\n",
-    "            gen_tpr, old_tpr, new_tpr = result[\"generated\"], result[\"old\"], result[\"new\"]\n",
+    "            gen_tpr, nwr_tpr, old_tpr, new_tpr = (\n",
+    "                result[\"generated\"],\n",
+    "                result[\"no_wm_rephrased\"],\n",
+    "                result[\"old\"],\n",
+    "                result[\"new\"],\n",
+    "            )\n",
     "            print(f\"FPR: {fpr*100:.2f}%\")\n",
     "            print(f\"  Original TPR: {gen_tpr*100:.2f}%\")\n",
+    "            print(f\"  Original TPR after NW rephrasing: {nwr_tpr*100:.2f}%\")\n",
     "            print(f\"  Original TPR after rephrasing: {old_tpr*100:.2f}%\")\n",
     "            print(f\"  Rephrased TPR: {new_tpr*100:.2f}%\")\n",
     "            print()\n",
@@ -102,13 +110,6 @@
     "        print()\n",
     "        print()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
